--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@types/dom-to-image": "^2.6.4",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "dom-to-image": "^2.6.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-code-blocks": "^0.0.9-0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
   }
